<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BurnDown</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="burndown">Burndown</string>
    <string name="stories">Stories</string>
    <string name="time">Time</string>
    <string name="velocity">Velocity</string>
    <string name="login">Login</string>
    <string name="title_activity_choices">ChoicesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_parse_bugzilla">ParseBugzillaActivity</string>
    <string name="title_activity_project_list_view">ProjectListViewActivity</string>
    <string name="remember">Remember Me</string>
    <string name="change">Change</string>
    <string name="changePassword">Change Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="newPass">New Password</string>
    <string name="currentPass">Current Password</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_project">Project</string>
    <string name="new_screen">new_screen</string>
    <string name="back_login">Back to login</string>
    <string name="temp">This page will display several options for the user to select from (Charts, stories, etc)</string>
    <string name="title_activity_project_test">ProjectTest</string>
    <string name="title_activity_projects_test">ProjectsTest</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_project_info">ProjectInfoActivity</string>
    <string name="title_activity_project_stories">ProjectStoriesActivity</string>
    <string name="title_activity_burn_down">BurnDown</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_sprint_burndown">SprintBurndownActivity</string>
    <string name="title_activity_sprints">SprintsActivity</string>

</resources>
