<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.burndown.ChangePasswordActivity" >

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/activity_horizontal_margin" />

    <Button
        android:id="@+id/change"
        style="@android:style/TextAppearance.Holo.DialogWindowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:onClick="changePassword"
        android:text="@string/change" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmPass"
        android:layout_alignLeft="@+id/confirmPass"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/newPass"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white" />

    <EditText
        android:id="@+id/currentPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPass"
        android:layout_alignLeft="@+id/newPass"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/currentPass"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white" />

</RelativeLayout>
